Use options pattern for jwt settings

--- a/JwtAuthTemplate/appsettings.Development.json
+++ b/JwtAuthTemplate/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "",
+  "ConnectionStrings": {
+    "ApplicationConnection": ""
+  },
+  "CorsOrigins": "",
+  "JwtSettings": {
+    "SecurityKey": "",
+    "ValidIssuer": "",
+    "ValidAudience": "",
+    "ExpiresInMinutes": 10,
+    "CookieName": ""
   }
 }
